fixed long task wrapping

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -9,14 +9,21 @@
 .item.item-checkbox label
   width: 80%
 
-.x-box
+.button.x-box
+  position: absolute
+  right: 6px
   float: right
   margin: -15px 0
 
-  &::before
-    font-size: 10px
+  &:before
+    font-size: 25px
 
 .red
   color: #A60000
 
-.item-checkbox
+.task.item-checkbox
+  padding-right: 45px
+
+.task.item-checkbox span
+  white-space: pre-wrap
+  word-break: break-all
